--- a/references.bib
+++ b/references.bib
@@ -40,6 +40,23 @@
   doi = {10.1177/1745691612463078}
 }
 
+@article{vandongenBayesianPerspectiveSeverity2023,
+  title = {A {{Bayesian}} Perspective on Severity: Risky Predictions and Specific Hypotheses},
+  shorttitle = {A {{Bayesian}} Perspective on Severity},
+  author = {family=Dongen, given=Noah, prefix=van, useprefix=true and Sprenger, Jan and Wagenmakers, Eric-Jan},
+  date = {2023-04-01},
+  journaltitle = {Psychonomic Bulletin \& Review},
+  shortjournal = {Psychon Bull Rev},
+  volume = {30},
+  number = {2},
+  pages = {516--533},
+  issn = {1531-5320},
+  doi = {10.3758/s13423-022-02069-1},
+  url = {https://doi.org/10.3758/s13423-022-02069-1},
+  urldate = {2023-10-09},
+  langid = {english}
+}
+
 @article{mellorEasyPreregistrationWill2018,
   title = {Easy Preregistration Will Benefit Any Research},
   author = {Mellor, David T. and Nosek, Brian A.},
@@ -572,4 +589,33 @@
   doi = {10.1017/9781107286184},
   urldate = {2023-05-12},
   isbn = {978-1-107-28618-4 978-1-107-05413-4 978-1-107-66464-7}
+}
+
+@incollection{mayoErrorStatistics2011,
+  title = {Error {{Statistics}}},
+  booktitle = {Philosophy of {{Statistics}}},
+  author = {Mayo, Deborah G. and Spanos, Aris},
+  date = {2011},
+  pages = {153--198},
+  publisher = {{Elsevier}},
+  doi = {10.1016/B978-0-444-51862-0.50005-8},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/B9780444518620500058},
+  urldate = {2023-10-09},
+  isbn = {978-0-444-51862-0},
+  langid = {english}
+}
+
+@article{lakensValuePreregistrationPsychological2019,
+  title = {The Value of Preregistration for Psychological Science: {{A}} Conceptual Analysis},
+  shorttitle = {The Value of Preregistration for Psychological Science},
+  author = {Lakens, Daniel},
+  date = {2019},
+  journaltitle = {心理学評論},
+  volume = {62},
+  number = {3},
+  pages = {221--230},
+  publisher = {{心理学評論刊行会}},
+  doi = {10.24602/sjpr.62.3_221},
+  url = {https://www.jstage.jst.go.jp/article/sjpr/62/3/62_221/_article/-char/ja/},
+  urldate = {2023-10-09}
 }
